debugging registration flow; fixed username exists message not showing

--- a/webApp/thirstyCat/src/main/resources/static/css/login.css
+++ b/webApp/thirstyCat/src/main/resources/static/css/login.css
@@ -3,7 +3,7 @@
 }
 
 #login-container {
-	width: 500px;
+	max-width: 500px;
 	margin: 10px auto;
 	border: 12px solid #b8b8ff;
 	border-radius: 15px;
